# tribute

./: .coderabbit.yaml  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .markdownlint.json  AGENTS.md  CLAUDE.md  Cargo.toml  GC_DESIGN.md  LICENSE  README.md  SALSA_INTEGRATION.md  _typos.toml  build.rs  codecov.yml  package-lock.json  package.json
crates/tree-sitter-tribute/: Cargo.toml  build.rs  grammar.js  jsconfig.json  package-lock.json  tree-sitter.json
crates/tree-sitter-tribute/src/: grammar.json  node-types.json  parser.c  scanner.c
crates/tree-sitter-tribute/src-rs/: lib.rs
crates/tree-sitter-tribute/test/corpus/: basic.txt  comments.txt  multiline_strings.txt  string_interpolation.txt
crates/tribute-ast/: Cargo.toml
crates/tribute-ast/src/: ast.rs  database.rs  lib.rs  parser.rs
crates/tribute-codegen/: Cargo.toml
crates/tribute-codegen/src/hir_to_mlir/: expression.rs  function_gen.rs  mod.rs  types.rs
crates/tribute-cranelift/: Cargo.toml
crates/tribute-cranelift/src/: codegen.rs  compiler.rs  errors.rs  lib.rs  runtime.rs  tests.rs  types.rs
crates/tribute-cranelift/tests/: compilation_tests.rs
crates/tribute-evaluator/: Cargo.toml
crates/tribute-evaluator/src/: evaluator.rs  lib.rs
crates/tribute-evaluator/tests/: evaluator_tests.rs
crates/tribute-front/: Cargo.toml
crates/tribute-front/proptest-regressions/ast/: prop.txt
crates/tribute-front/src/: lib.rs  line_index.rs  lsp_index.rs  query.rs  source_file.rs
crates/tribute-front/src/ast/: calling_convention.rs  decl.rs  expr.rs  lookup.rs  mod.rs  node_id.rs  pattern.rs  phases.rs  prop.rs  span_map.rs  types.rs
crates/tribute-front/src/ast_to_ir/: context.rs  lower.rs  mod.rs
crates/tribute-front/src/astgen/: context.rs  declarations.rs  expressions.rs  helpers.rs  mod.rs  patterns.rs
crates/tribute-front/src/monomorphize/: collect.rs  mangle.rs  mod.rs  rewrite.rs  specialize.rs
crates/tribute-front/src/resolve/: env.rs  mod.rs  resolver.rs
crates/tribute-front/src/tdnr/: mod.rs  resolver.rs
crates/tribute-front/src/tirgen/: context.rs  declarations.rs  expressions.rs  helpers.rs  literals.rs  mod.rs  statements.rs
crates/tribute-front/src/typeck/: checker.rs  constraint.rs  context.rs  effect_row.rs  func_context.rs  mod.rs  solver.rs  subst.rs
crates/tribute-front/tests/: block_scope.rs  case_type.rs  cps_lowering.rs  evidence_lowering.rs  expr_coverage.rs  int_text.rs  lambda_effect_type.rs  let_generalization.rs  nominal_type_identity.rs  record_field_type.rs  tuple_pattern.rs  ufcs_method_call.rs
crates/tribute-front/tests/common/: mod.rs
crates/tribute-front/tests/snapshots/: block_scope__block_let_binding_accessible_inside.snap  block_scope__block_with_case_pattern_binding.snap  block_scope__nested_blocks_separate_scopes.snap  block_scope__outer_scope_accessible_in_inner_block.snap  block_scope__sequential_blocks_independent_scopes.snap  case_type__case_bool_literal.snap  case_type__case_enum_variant.snap  case_type__case_int_literal.snap  case_type__case_nat_literal.snap  case_type__case_nested.snap  case_type__case_result_type_unification.snap  cps_lowering__ability_op_then_pure_expr.snap  cps_lowering__handle_with_do_and_op_arms.snap  cps_lowering__handle_with_fn_handler.snap  (+51 more)
crates/tribute-hir-dialect/: CMakeLists.txt  Cargo.toml  build.rs
crates/tribute-hir-dialect/src/: dialect.rs  errors.rs  evaluator.rs  hir_lowering.rs  lib.rs  lowering.rs  ops.rs  salsa_integration.rs  types.rs
crates/tribute-hir-dialect/tablegen/: TributeOps.td
crates/tribute-hir-dialect/tests/: basic_tests.rs  debug_test.rs  hir_to_mlir_integration.rs  salsa_integration_tests.rs  simple_test.rs  tablegen_initialization_test.rs
crates/tribute-ir/: Cargo.toml
crates/tribute-ir/src/: lib.rs  metadata.rs
crates/tribute-passes/: Cargo.toml
crates/tribute-passes/src/: ast_to_tir.rs  boxing.rs  case_lowering.rs  closure_lower.rs  const_inline.rs  cont_capture_fixup.rs  cont_to_trampoline.rs  cont_util.rs  cst_to_tir.rs  diagnostic.rs  evidence.rs  handler_lower.rs  inline_refs.rs  intrinsic_to_arith.rs  io_lowering.rs  lambda_lift.rs  lib.rs  list_intrinsics.rs  live_vars.rs  lower.rs  lower_ability_perform.rs  lower_closure_lambda.rs  lower_handle_dispatch.rs  pipeline.rs  resolve.rs  resolve_evidence.rs  resolve_type_references.rs  tail_resumptive.rs  tdnr.rs  tr_dispatch.rs  trampoline_to_adt.rs  tribute_to_cont.rs  tribute_to_scf.rs  type_converter.rs
crates/tribute-runtime/: Cargo.toml  build.rs
crates/tribute-runtime/benches/: quick_benchmark.rs  string_performance.rs
crates/tribute-runtime/examples/: handle_demo.rs  interning_demo.rs
crates/tribute-runtime/src/: arithmetic.rs  array.rs  asan.rs  boolean.rs  builtins.rs  handle.rs  interned_string.rs  lib.rs  list.rs  memory.rs  number.rs  string.rs  string_ops.rs  tests.rs  tls.rs  value.rs
crates/tribute-runtime/tests/: trstring_enum.rs
crates/tribute-trunk-ir/: Cargo.toml
crates/tribute-trunk-ir/src/: adt.rs  arith.rs  cont.rs  core.rs  func.rs  hir.rs  ir.rs  lib.rs  location.rs  lower.rs  mem.rs  ops.rs  queries.rs  scf.rs  src.rs  type_interface.rs  types.rs
crates/tribute-wasm-backend/: Cargo.toml
crates/tribute-wasm-backend/src/: constants.rs  data_registry.rs  emit.rs  errors.rs  gc_types.rs  lib.rs  lower_wasm.rs  plan.rs  translate.rs  type_converter.rs  validation.rs
crates/trunk-ir/: Cargo.toml
crates/trunk-ir-cranelift-backend/: Cargo.toml
crates/trunk-ir-cranelift-backend/src/: adt_layout.rs  errors.rs  function.rs  lib.rs  translate.rs  validation.rs
crates/trunk-ir-wasm-backend/: Cargo.toml
crates/trunk-ir-wasm-backend/src/: emit.rs  errors.rs  gc_types.rs  lib.rs  plan.rs  translate.rs  validation.rs  wasm_binary.rs
crates/trunk-ir/proptest-regressions/: parser.txt
crates/trunk-ir/src/: adt_layout.rs  analysis.rs  context.rs  diagnostic.rs  dominance.rs  ir.rs  ir_mapping.rs  lib.rs  location.rs  op_interface.rs  ops.rs  parser.rs  pass.rs  printer.rs  qualified_name.rs  symbol.rs  test_db.rs  type_interface.rs  types.rs  validation.rs  walk.rs
(+652 files in other folders)
