[workspace]
members = [".", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
fluent-uri = "0.1.4"
cranelift-codegen = "0.120"
cranelift-frontend = "0.120"
cranelift-module = "0.120"
cranelift-object = "0.120"
dashmap = "6.1"
derive_more = { version = "2.0", features = ["display", "error", "from"] }
insta = "1.43.1"
inventory = "0.3"
lasso = "0.7"
lsp-server = "0.7"
lsp-types = "0.97"
object = { version = "0.36", features = ["write_core"] }
parking_lot = "0.12"
paste = "1.0"
proptest = "1.9"
ropey = "1.6"
salsa = "0.25.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1.13", features = ["union", "const_generics", "serde"] }
target-lexicon = "0.13"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.25.6"
tree-sitter-tribute = { git = "https://github.com/Kroisse/tree-sitter-tribute", tag = "v0.2.2" }
tribute-cranelift = { path = "crates/tribute-cranelift" }
tribute-core = { path = "crates/tribute-core" }
tribute-front = { path = "crates/tribute-front" }
tribute-passes = { path = "crates/tribute-passes" }
tribute-wasm-backend = { path = "crates/tribute-wasm-backend" }
trunk-ir = { path = "crates/trunk-ir" }
unsynn = "0.3.0"
quote = "1.0"
wasm-encoder = "0.243.0"

[package]
name = "tribute"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
dashmap.workspace = true
fluent-uri.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
ropey.workspace = true
salsa.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tribute-front.workspace = true
tribute-passes.workspace = true
tribute-wasm-backend.workspace = true
trunk-ir.workspace = true
tree-sitter.workspace = true
tree-sitter-tribute.workspace = true

[dev-dependencies]
insta.workspace = true
salsa-test-macros = { path = "crates/salsa-test-macros" }
