[workspace]
members = [".", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
license = "MIT"

[workspace.dependencies]
ariadne = "0.6"
clap = { version = "4.5", features = ["derive"] }
fluent-uri = "0.1.4"
cranelift-codegen = "0.120"
cranelift-frontend = "0.120"
cranelift-module = "0.120"
cranelift-object = "0.120"
dashmap = "6.1"
derive_more = { version = "2.0", features = ["display", "error", "from"] }
insta = "1.46.0"
inventory = "0.3"
lasso = "0.7"
lsp-server = "0.7"
lsp-types = "0.97"
object = { version = "0.38", features = ["write_core"] }
parking_lot = "0.12"
paste = "1.0"
proptest = "1.9"
ropey = "1.6"
salsa = "0.25.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1.13", features = ["union", "const_generics", "serde"] }
target-lexicon = "0.13"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.25.6"
tree-sitter-tribute = { git = "https://github.com/Kroisse/tree-sitter-tribute", tag = "v0.5.0" }
tribute-cranelift = { path = "crates/tribute-cranelift" }
tribute-core = { path = "crates/tribute-core" }
tribute-front = { path = "crates/tribute-front" }
tribute-passes = { path = "crates/tribute-passes" }
tribute-ir = { path = "crates/tribute-ir" }
tribute-wasm-backend = { path = "crates/tribute-wasm-backend" }
trunk-ir = { path = "crates/trunk-ir" }
unsynn = "0.3.0"
quote = "1.0"
wasm-encoder = "0.243.0"
wasmtime = "40.0"
wasmtime-wasi = "40.0"

[package]
name = "tribute"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ariadne.workspace = true
clap.workspace = true
crossbeam-channel = "0.5"
dashmap.workspace = true
fluent-uri.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
ropey.workspace = true
salsa.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tribute-front.workspace = true
tribute-ir.workspace = true
tribute-passes.workspace = true
tribute-wasm-backend.workspace = true
trunk-ir.workspace = true
tree-sitter.workspace = true
tree-sitter-tribute.workspace = true

[dev-dependencies]
insta.workspace = true
salsa-test-macros = { path = "crates/salsa-test-macros" }
wasmtime.workspace = true
wasmtime-wasi.workspace = true
