[workspace]
members = [".", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Eunchong Yu <kroisse@gmail.com>"]
license = "MIT"

[workspace.dependencies]
ariadne = "0.6"
clap = { version = "4.5", features = ["derive"] }
cranelift-codegen = "0.128.3"
cranelift-frontend = "0.128.3"
cranelift-module = "0.128.3"
cranelift-object = "0.128.3"
dashmap = "6.1"
derive_more = { version = "2.0", features = ["display", "error", "from"] }
fluent-uri = "0.1.4"
insta = "1.46.3"
inventory = "0.3"
lasso = "0.7"
lsp-server = "0.7"
lsp-types = "0.97"
object = { version = "0.38", features = ["write_core"] }
parking_lot = "0.12"
paste = "1.0"
proptest = "1.10"
quote = "1.0"
ropey = "1.6"
rustc-hash = "2.1"
salsa = "0.26.0"
salsa-test-macros = { path = "crates/salsa-test-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1.13", features = ["union", "const_generics", "serde"] }
target-lexicon = "0.13"
tempfile = "3.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26.5"
tree-sitter-tribute = { git = "https://github.com/Kroisse/tree-sitter-tribute", tag = "v0.5.1" }
tribute-core = { path = "crates/tribute-core" }
tribute-front = { path = "crates/tribute-front" }
tribute-ir = { path = "crates/tribute-ir" }
tribute-passes = { path = "crates/tribute-passes" }
trunk-ir = { path = "crates/trunk-ir" }
trunk-ir-cranelift-backend = { path = "crates/trunk-ir-cranelift-backend" }
trunk-ir-wasm-backend = { path = "crates/trunk-ir-wasm-backend" }
unsynn = "0.3.0"
wasm-encoder = "0.245.0"
winnow = "0.7"

[package]
name = "tribute"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ariadne.workspace = true
clap.workspace = true
crossbeam-channel = "0.5"
dashmap.workspace = true
derive_more.workspace = true
fluent-uri.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
ropey.workspace = true
salsa.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tree-sitter.workspace = true
tree-sitter-tribute.workspace = true
tribute-front.workspace = true
tribute-ir.workspace = true
tribute-passes.workspace = true
trunk-ir.workspace = true
tempfile.workspace = true
trunk-ir-cranelift-backend.workspace = true
trunk-ir-wasm-backend.workspace = true

[dev-dependencies]
insta.workspace = true
salsa-test-macros = { path = "crates/salsa-test-macros" }
serde.workspace = true
