[package]
name = "tree-sitter-tribute"
version = "0.1.0"
edition = "2024"
authors = ["Tribute Language Team"]
description = "Tree-sitter grammar for the Tribute programming language"
license = "MIT"
repository = "https://github.com/your-org/tribute"
keywords = ["tree-sitter", "parser", "tribute", "language"]
categories = ["parsing"]

[lib]
path = "src-rs/lib.rs"

[dependencies]
tree-sitter.workspace = true

[build-dependencies]
cc = "1.0"