[package]
name = "tribute-ast"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dashmap = "6.1"
derive_more.workspace = true
salsa.workspace = true
serde.workspace = true
tree-sitter.workspace = true
tree-sitter-tribute.workspace = true
tribute-core.workspace = true
