[package]
name = "tribute-cranelift"
version = "0.1.0"
edition = "2021"
authors = ["Tribute Contributors"]
description = "Cranelift-based native code compiler for Tribute programming language"

[dependencies]
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-module.workspace = true
cranelift-object.workspace = true
target-lexicon.workspace = true
object.workspace = true
tribute-ast.workspace = true
tribute-hir.workspace = true
salsa.workspace = true
derive_more.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
tribute = { path = "../../" }