[package]
name = "tribute-cranelift"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cranelift-based native code compiler for Tribute programming language (stub - pending TrunkIR backend)"

[dependencies]
cranelift-codegen.workspace = true
cranelift-module.workspace = true
object.workspace = true
derive_more.workspace = true
