[package]
name = "tribute-front"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Front-end utilities for Tribute (CST parsing and text helpers)"

[dependencies]
fluent-uri.workspace = true
salsa.workspace = true
ropey.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-tribute.workspace = true
trunk-ir.workspace = true
