[package]
name = "tribute-front"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Front-end utilities for Tribute (CST parsing and text helpers)"

[dependencies]
fluent-uri.workspace = true
im.workspace = true
salsa.workspace = true
ropey.workspace = true
smallvec.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-tribute.workspace = true
tribute-core.workspace = true
tribute-ir.workspace = true
trunk-ir.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
salsa-test-macros = { workspace = true }
