[package]
name = "tribute-passes"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Compiler passes for Tribute (CST to TrunkIR lowering, type inference, etc.)"

[dependencies]
salsa.workspace = true
trunk-ir.workspace = true

[dev-dependencies]
salsa-test-macros = { path = "../salsa-test-macros" }
