[package]
name = "tribute-passes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compiler passes for Tribute (CST to TrunkIR lowering, type inference, etc.)"

[dependencies]
salsa.workspace = true
tracing.workspace = true
tribute-core.workspace = true
tribute-ir.workspace = true
trunk-ir.workspace = true
trunk-ir-wasm-backend.workspace = true

[dev-dependencies]
salsa-test-macros = { path = "../salsa-test-macros" }
