[package]
name = "tribute-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Tribute Contributors"]
description = "Runtime library for compiled Tribute programs"

[lib]
# Build both static and dynamic libraries for maximum compatibility
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# DashMap for concurrent hash maps - better performance than Mutex<HashMap>
dashmap = "6.0"

[build-dependencies]
# For C header generation if needed later
# cbindgen = "0.24"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "string_performance"
harness = false

[[bench]]
name = "quick_benchmark"
harness = false

[features]
default = []
# Debug features for development
debug_runtime = []