[package]
name = "tribute-trunk-ir"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "TrunkIR (multi-level dialect IR) for Tribute"

[dependencies]
inventory.workspace = true
paste.workspace = true
salsa.workspace = true
serde.workspace = true
smallvec.workspace = true

