[package]
name = "tribute-wasm-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
derive_more.workspace = true
salsa.workspace = true
tracing.workspace = true
tribute-ir.workspace = true
trunk-ir.workspace = true
wasm-encoder.workspace = true

[dev-dependencies]
insta.workspace = true
salsa-test-macros = { path = "../salsa-test-macros" }
tempfile.workspace = true

[features]
wasmtime-tests = []
