[package]
name = "trunk-ir-wasm-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM backend for TrunkIR (language-agnostic)"

[dependencies]
derive_more.workspace = true
salsa.workspace = true
tracing.workspace = true
trunk-ir.workspace = true
wasm-encoder.workspace = true

[dev-dependencies]
insta.workspace = true
salsa-test-macros = { path = "../salsa-test-macros" }
